second commit js practice

--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
     
 
 
+    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+    <h2 id="dev" class="de"> My Name Is Md Arif-Uz-Zaman Razi</h2>
+    
+    <P id="end">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum a voluptatibus ipsum in, esse mollitia reiciendis autem praesentium, aliquid eligendi atque. Voluptates corporis placeat accusamus, commodi perferendis eius ipsum doloremque!</P>
 
+
+
+    <div class="main" id="new">
+
+        <a href="#">hello Zarif</a>
+
+        <ul>
+            <li><a href="#">absolutely good practice</a></li>
+        </ul>
+
+        <div class="footer">
+            <h1>hellow There</h1>
+        </div>
+
+
+        <button onclick="alert('Hello Learners')">click me 1</button>
+        <button onclick="myFunc()"> click me 2</button>
+        <button onclick="myFunc2()">Click Me</button>
+        <p id="paraId"></p>
+
+
+
+
+
+
+    </div>
 
 
 
