--- a/index.html
+++ b/index.html
@@ -102,10 +102,122 @@
         <button class="button g">Sound-7</button>
 
 
-        <audio src="./sound/sound-1.mp3"></audio>
-
 
     </div>
+
+    <div>
+        <button class="button a">a</button>
+        <button class="button b">b</button>
+        <button class="button c">c</button>
+        <button class="button d">d</button>
+        <button class="button e">e</button>
+        <button class="button f">f</button>
+        <button class="button g ">g</button>
+    </div>
+
+
+        <div>
+            <label for="name">Name:
+                <input type="text" name="name" class="my-class" id="my-id">
+            </label>
+        </div>
+
+
+        <div>
+            <h1>CheckBox</h1>
+
+            <label for="c">
+                <input type="checkbox" name="program" id="c" value="c">C
+            </label>
+
+            <label for="js">
+                <input type="checkbox" name="program" id="js" value="js">JS
+            </label>
+
+            <label for="python">
+                <input type="checkbox" name="program" id="python" value="python">Python
+            </label>
+            
+
+        </div>
+
+
+        <div>
+            <h1> Selactor</h1>
+        <label for="deprtment">Department</label>
+        <select name="department" id="department">
+            <option value="cse">CSE</option>
+            <option value="eee">EEE</option>
+            <option value="bba">BBA</option>
+            <option value="llb">LLB</option>
+        </select>
+
+        </div>
+
+
+        <div>
+            <h1>Form </h1>
+
+            <form action="">
+                <div class="label">
+                    <label for="name">Name: <input type="text" id="name" required autofocus></label>
+                </div>
+                <div class="label">
+                    <label for="email">Email: <input type="email" id="email" required autofocus size="30"></label>
+                </div>
+                <div class="label">
+                    <label for="password">Password: <input type="password" id="password" required autofocus minlength="4" maxlength="16"></label>
+                </div>
+                <div>
+                    <input type="submit" value="Signup Now" id="submit">
+                </div>
+            </form>
+
+
+        </div>
+
+        <div>
+            <video  width="500" height="300" controls loops>
+            <source src="./video/video1.mp4"type="video/mp4" >
+            </video>
+        </div>
+
+
+
+        <div>
+            <details>
+                <summary>HELLO</summary>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ipsam sequi cum. Architecto doloremque, optio pariatur aliquid fuga labore delectus commodi veniam quisquam. Pariatur explicabo temporibus nobis laboriosam quibusdam iusto!</p>
+            </details>
+        </div>
+        <div class="squar" id="squar">
+
+
+            <P>Lorem ipsum dolor sit amet.</P>
+
+            <BUtton class="btn">Button-1</BUtton>
+            <BUtton class="btn">Button-2</BUtton>
+            <BUtton class="btn">Button-3</BUtton>
+            
+        </div>
+
+        <div>
+
+        <textarea name="text" id="text" cols="30" rows="10"></textarea>
+
+        </div>
+
+
+        <div>
+            <input type="text" id="input">
+            <p id="prgf"></p>
+        </div>
+
+
+        <div id="drop" class="drop"></div>
+        <p id="drag" draggable="true">Md.Arif-uz-Zaman Razi</p>
+
+
 
 
 
