--- a/index.html
+++ b/index.html
@@ -218,6 +218,36 @@
         <p id="drag" draggable="true">Md.Arif-uz-Zaman Razi</p>
 
 
+        <div>
+            <h1>BOM</h1>
+            <div class="location">
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+
+        </div>
+
+
+
+    <div class="settime">
+        <button class="timeout">Submit</button>
+        <p class="timeout-Massage"></p>
+    </div>
+
+
+
+    <div>
+        <input type="text" class="try">
+        <button id="check">Check</button>
+    </div>
+
+
+
+
 
 
 
